--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ mypy-extensions==0.4.3
 pathspec==0.10.1
 platformdirs==2.5.2
 psycopg2-binary==2.9.3
+python-dotenv==0.21.0
 SQLAlchemy==1.4.41
 tomli==2.0.1
 typing-extensions==4.3.0
